# 01DeepDiveApril2026

./: .dockerignore  .gitignore  Dockerfile  README.md  azure_demo.py  azure_langchain_demo.py  chat_prompt_template_demo.py  chatbot.py  chatbot_memory.py  chatbot_spec.md  chatbot_streamlit.py  claude_demo.py  claude_langchain_demo.py  gemini_langchain_demo.py  groq_demo.py  hf_demo.ipynb  hf_demo_local.ipynb  huggingface_local_demo.ipynb  main.py  ollama_langchain_demo.py  openai_demo.ipynb  openai_demo.py  openai_langchain_demo.py  prompt_template_demo.py  pyproject.toml  rag_langchain_ollama_rag.ipynb  rag_langchain_ollama_rag_pinecone.ipynb  requirements.txt  streamlit_demo.py  test_chatbot.py
