[project]
name = "01deepdiveapril2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.97.0",
    "groq>=1.2.0",
    "langchain-anthropic>=1.4.2",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
]
